base.css: 	Resume: fixed some spacing print.css: 	Resume: redid the layout a little base.html: 	Footer: Added a button to my archived site for 		project navigation until that section gets added portfolio: 	About: Added a blurb about the site being built Resume: 	Updated the copy and cleaned up some print rendering erros.

--- a/static/base.css
+++ b/static/base.css
@@ -918,6 +918,10 @@ body {
     margin-bottom: 90px;
 }
 
+.resume > .c2 h5 {
+    margin-bottom: 5px;
+}
+
 .res-abt-sec .icon-link {
     width: 25%;
     background-color: white;
@@ -942,6 +946,10 @@ body {
     background-color: rgba(255, 255, 255, .98);
     border-bottom: 6px solid rgba(0, 0, 0, .1);
     margin-bottom: 6px;
+}
+
+.p-hidden {
+    display: none;
 }
 
 .icon-link-con {
